--- a/styles.css
+++ b/styles.css
@@ -57,27 +57,24 @@ button:hover {
 table {
   width: 100%;
   border-collapse: collapse;
-  margin-top: 20px;
-  color: white;
+  margin: 20px 0;
+  background-color: #f2f2f2;
 }
 
 th,
 td {
-  border: 1px solid #f4efef;
-  padding: 8px;
-  text-align: center;
+  padding: 10px;
+  text-align: left;
+  border-bottom: 1px solid #ddd;
 }
 
 th {
-  background-color: #444;
+  background-color: #4caf50;
+  color: white;
 }
 
-tr:nth-child(even) td {
-  background-color: #333;
-}
-
-tr:hover td {
-  background-color: #555;
+tr:hover {
+  background-color: #ddd;
 }
 
 .success {
