--- a/styles.css
+++ b/styles.css
@@ -58,7 +58,8 @@ table {
   width: 100%;
   border-collapse: collapse;
   margin: 20px 0;
-  background-color: #f2f2f2;
+  background-color: #c4c2c2;
+  font-weight: bold;
 }
 
 th,
@@ -69,7 +70,7 @@ td {
 }
 
 th {
-  background-color: #4caf50;
+  background-color: blue;
   color: white;
 }
 
@@ -78,7 +79,7 @@ tr:hover {
 }
 
 .success {
-  color: #28a745;
+  color: #0fa732;
   font-weight: bold;
 }
 
